--- a/views/index.html
+++ b/views/index.html
@@ -8,16 +8,26 @@
         <script src = "https://unpkg.com/htmx.org/dist/htmx.min.js"></script>
     </head>
     <body>
-        <div id = "count">
-        {{ template "count" .}}
-        </div>
-        <button hx-target = "#count" hx-post="/count">Count</button>
+        {{ template "form" .}}
+        <hr />
+        {{ template "display" .}}
     </body>
 </html>
 {{ end }}
 
+{{ block "form" . }}
+<form hx-swap = "outerHTML" hx-target = "#contacts" hx-post = "/contacts">
+    name: <input type="text" name = "name" />
+    email: <input type="text" name = "email" />
+    <button type="submit">Create Contact</button>
+</form>
+{{ end }}
 
-{{ block "count" .}}
-Count {{ .Count }}     
-
+{{ block "display" . }}
+<div id = "contacts" style="display: flex; flex-direction: column">
+    {{range .Contacts}}
+        Name: <span>{{ .Name }}</span>
+        Email: <span>{{ .Email }}</span>
+    {{end}} 
+</div>
 {{ end }}
