used swap and reswapped

--- a/views/index.html
+++ b/views/index.html
@@ -17,8 +17,12 @@
 
 {{ block "form" . }}
 <form hx-swap = "outerHTML" hx-target = "#contacts" hx-post = "/contacts">
-    name: <input type="text" name = "name" />
-    email: <input type="text" name = "email" />
+    name: <input
+    {{ if .Values.name }} value = "{{ .Values.name }}" {{ end }}
+    type="text" name = "name" />
+    email: <input 
+    {{ if .Values.email }} value = "{{ .Values.email }}" {{ end }}
+    type="text" name = "email" />
     <button type="submit">Create Contact</button>
 </form>
 {{ end }}
